Clearing out the cruft

--- a/index.html
+++ b/index.html
@@ -1,13 +1,17 @@
 ---
 layout: default
-title: Your New Jekyll Site
+title: Between the Lines
 ---
 
 <div id="home">
-  <h1>Blog Posts</h1>
+  <h1>Whoa, hold your horses!</h1>
+  <p>I'm between blogs at the moment, but this sure is a more attractive 
+     placeholder than most registrars would force on you, eh?</p>
+
+  <!-- <h1>Blog Posts</h1>  --- to be turned back on some day when I'm writing again
   <ul class="posts">
     {% for post in site.posts %}
       <li><span>{{ post.date | date_to_string }}</span> &raquo; <a href="{{ post.url }}">{{ post.title }}</a></li>
     {% endfor %}
-  </ul>
+  </ul> -->
 </div>
